--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "travel-journal",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://jasminefloyd.github.io/travel-journal/",
   "type": "module",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
@@ -22,6 +25,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
     "vite": "^5.3.1"
   }
 }
