--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "homepage": "https://jasminefloyd.github.io/travel-journal/",
   "type": "module",
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.12.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
