--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.0",
     "firebase": "^10.12.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
