--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "react-scripts start",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.45.0",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
