--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://jasminefloyd.github.io/travel-journal/
+REACT_APP_API_URL=https://acaffqpfkqyxgojtglgy.supabase.co/storage/v1/object/public/
